--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p>Esta é a página principal que usa JavaScript para adicionar iteração.</p>
 
     <section>
-        <form name>
-            <input type="text" name="quantidade" value="5">
-            <input type="text" name="fruta">
-            <input type="submit">
+        <form name="entrada">
+            <input name="quantidade" value="5">
+            <input name="fruta" value="peras">
+            <input type="submit" name="enviar">
         </form>
     </section>
     <section></section>
