avancando no index

--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DCC202 - Atividade 12: Caio Nascimento</title>
     <script type="module" src="main.js"></script>
-</head>
-<body>
+    <style>input:invalid{
+        border: 1px solid red;
+        color: red;
+    }
+    </style>
+  </head>
+  <body>
+    <main>
+      <h1>DCC202 - Atividade 12: Caio Nascimento</h1>
+      <p>
+        Esta é a página principal que usa JavaScript para adicionar iteração.
+      </p>
 
-    <h1>DCC202 - Atividade 12: Caio Nascimento</h1>
-    <p>Esta é a página principal que usa JavaScript para adicionar iteração.</p>
-
-    <section>
+      <section>
         <form name="entrada">
-            <input name="quantidade" value="5">
-            <input name="fruta" value="peras">
-            <input type="submit" name="enviar">
+          <input type="number" name="quantidade" value="5" min="0" max="12"/>
+          <input type="radio" name="origem" value="maria">
+          <input type="radio" name="origem" value="joao">
+          <select name="fruta">
+            <option value="maca">Maçã</option>
+            <option value="pera">Pera</option>
+            <option value="banana">Banana</option>
+          </select>
+          <buttom type="submit" name="enviar">Enviar</buttom>
         </form>
-    </section>
-    <section></section>
-    
-</body>
+      </section>
+      <section></section>
+    </main>
+  </body>
 </html>
