--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DCC202 - Atividade 12: Caio Nascimento</title>
     <script type="module" src="main.js"></script>
-    <style>input:invalid{
+    <style>
+      input:invalid {
         border: 1px solid red;
         color: red;
-    }
+      }
     </style>
   </head>
   <body>
@@ -20,18 +21,89 @@
 
       <section>
         <form name="entrada">
-          <input type="number" name="quantidade" value="5" min="0" max="12"/>
-          <input type="radio" name="origem" value="maria">
-          <input type="radio" name="origem" value="joao">
+          
+
+          <fieldset>
+            <legend>Origem</legend>
+
+            <label for="">
+                <input
+                  type="radio"
+                  name="origem"
+                  value="pomar"
+                  checked/>Pomar
+              </label>
+
+              <label for="" id="oJoao">
+                <input
+                  type="radio"
+                  name="origem"
+                  value="joao"
+                  checked
+                />João</label
+              >
+
+            <label for="" id="oMaria">
+              <input
+                type="radio"
+                name="origem"
+                value="maria"
+                checked
+              />Maria</label
+            >
+            
+          </fieldset>
+          <fieldset>
+            <legend>Destino</legend>
+            <label for="">
+              <input
+                name="radio"
+                name="destino"
+                value="pomar"
+                checked/>Pomar
+            </label>
+
+            <label for="" id="oJoao">
+                <input
+                  type="radio"
+                  name="destino"
+                  value="joao"
+                  checked
+                />João</label
+              >
+
+            <label for="" id="oMaria">
+                <input
+                  type="radio"
+                  name="destino"
+                  value="maria"
+                  checked
+                />Maria</label
+              >
+          </fieldset>
+          <input
+            type="number"
+            name="quantidade"
+            value="1"
+            min="0"
+            max="12"
+            step="1"
+          />
+
           <select name="fruta">
             <option value="maca">Maçã</option>
             <option value="pera">Pera</option>
             <option value="banana">Banana</option>
           </select>
-          <buttom type="submit" name="enviar">Enviar</buttom>
+          <button type="submit" name="enviar">Enviar</button>
         </form>
       </section>
-      <section></section>
+      <section id="saida">
+        <h2>João</h2>
+        <ol id="joao"></ol>
+        <h2>Maria</h2>
+        <ol id="Maria"></ol>
+      </section>
     </main>
   </body>
 </html>
